--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.1",
+    "jest": "^27.5.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,13 +25,15 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "ts-jest": "^27.1.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "shx rm -rf ../backend/build && react-scripts build && shx cp -r build ../backend/build",
-    "test": "react-scripts test",
+    "build": "shx rm -rf ../backend/build && react-scripts build && shx cp -r build ../backend/build && shx rm -rf build",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,6 +56,8 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
-    "shx": "^0.3.4"
+    "jest-svg-transformer": "^1.0.0",
+    "shx": "^0.3.4",
+    "ts-node": "^10.9.1"
   }
 }
